--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Constant Driver</title>
+    
+    <!-- PWA Meta Tags -->
+    <link rel="manifest" href="./manifest.json" />
+    <meta name="theme-color" content="#1a202c" />
+
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       /* Simple scrollbar styling for a better dark mode experience */
