fix: Mudanças no arquivo index.html

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Constant Driver</title>
     
     <!-- PWA Meta Tags -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="./manifest.json" />
     <meta name="theme-color" content="#1a202c" />
 
     <script src="https://cdn.tailwindcss.com"></script>
